[workspace]
members = [
    "serai"

]

[package]
name = "monero_db"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
monero-lmdb-rkv = {git = "https://github.com/Boog900/lmdb-rs.git"}
monero = {git = "https://github.com/Boog900/monero-rs.git", branch="db", features=["database"]}
thiserror = "1.0.24"
zeroize = "1.5.7"
[dev-dependencies]
monero-serai = {git="https://github.com/Cuprate/serai.git", branch="legacy"}